--- a/papers/byType.html
+++ b/papers/byType.html
@@ -73,6 +73,8 @@
 			<h3>Jump to...</h3>
 			
 			
+			<a href="#2024">2024</a>&nbsp;&nbsp;&nbsp;
+			
 			<a href="#2023">2023</a>&nbsp;&nbsp;&nbsp;
 			
 			<a href="#2022">2022</a>&nbsp;&nbsp;&nbsp;
@@ -325,23 +327,45 @@
 
 <h1><a name="Conference"></a>Conference</h1>
 <ol class="bibliography"><li><section id="citation">
-    <a href="/papers/li2023stargazer"><span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+    <a href="/papers/pratte2024hackles"><span id="pratte2024hackles">Sydney Pratt, Anthony Tang, Shannon Hoover, and Lora Oehlberg. (2024). <span style="text-decoration: underline"> HACKLES: Simulating and Visually Representing the Anxiety of Walking Alone </span>. In <i>TEI ’24: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
 
 (conference).</a><br />
 
 
 
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" "><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://tei.acm.org/2024"><i class="fa fa-sticky-note-o"></i></a>
 
 
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i></a>
+	<a href=" "><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/pratte2024hackles/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/feick2023voxelhap"><span id="feick2023voxelhap">Martin Feick, Cihan Biyikli, Kiran Gani, Anton Wittig, Anthony Tang, and Antonio Krüger. (2023). <span style="text-decoration: underline">VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 121/483 - 25.1%.</small>
 
 
-	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i></a>
 
-</section><a class="details" href="/papers/li2023stargazer/"><!-- --></a></li>
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3586183.3606722"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2023voxelhap/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/mok2023autisticlivestreamers"><span id="mok2023autisticlivestreamers">Terrance Mok, Anthony Tang, Adam McCrimmon, and Lora Oehlberg. (2023). <span style="text-decoration: underline">Experiences of Autistic Twitch Livestreamers: "I have made easily the most meaningful and impactful relationships"</span>. In <i>ASSETS 2023: Proceedings of the 25th International ACM SIGACCESS Conference on Computers and Accessibility</i>.</span>
 
@@ -385,6 +409,24 @@
 
 </section><a class="details" href="/papers/feick2023turnitup/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/li2023stargazer"><span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/li2023stargazer/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/feick2023handredirection"><span id="feick2023handredirection">Martin Feick, Kora Persephone Regitz, Anthony Tang, Tobias Jungbluth, Maurice Rekrut, and Antonio Krüger. (2023). <span style="text-decoration: underline">Investigating Noticeable Hand Redirection in Virtual Reality using Physiological and Interaction Data</span>. In <i>IEEE VR ’23: IEEE Conference on Virtual Reality and 3D User Interfaces</i>.</span>
 
 (conference).</a><br />
@@ -402,28 +444,6 @@
 	<a href="https://doi.org/10.1109/VR55154.2023.00035"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/feick2023handredirection/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/feick2023voxelhap"><span id="feick2023voxelhap">Martin Feick, Cihan Biyikli, Kiran Gani, Anton Wittig, Anthony Tang, and Antonio Krüger. (2023). <span style="text-decoration: underline">VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
-
-(conference).</a><br />
-
-	<small>Acceptance: 121/483 - 25.1%.</small>
-
-
-
-	<br />
-
-
-	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.pdf"><i class="fa fa-file-pdf-o"></i></a>
-
-
-
-	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.mp4"><i class="fa fa-film"></i></a>
-
-
-	<a href="https://doi.org/10.1145/3586183.3606722"><i class="fa fa-external-link"></i></a>
-
-</section><a class="details" href="/papers/feick2023voxelhap/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/pratte2023designspace"><span id="pratte2023designspace">Sydney Pratte, Anthony Tang, Shannon Hoover, Maria Elana Hoover, Matt Laprairie, Catherine Larose, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> Towards a Design Space for Storytelling on the Fashion Technology Runway </span>. In <i>TEI ’23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
 
@@ -643,19 +663,21 @@
 
 </section><a class="details" href="/papers/pratte2021empathy/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/anjani2020mukbang"><span id="anjani2020mukbang">Laurensia Anjani, Terrance Mok, Anthony Tang, Lora Oehlberg, and Goh Wooi Boon. (2020). <span style="text-decoration: underline">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</span>. In <i>CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems</i>, 1–12.</span>
+    <a href="/papers/vinod2020targetassistance"><span id="vinod2020targetassistance">Vinod Asokan, Scott Bateman, and Anthony Tang. (2020). <span style="text-decoration: underline">Assistance for Target Selection in Mobile Augmented Reality</span>. In <i>GI 2020: Proceedings of the 46th Graphics Interface Conference 2020</i>, 10 pages.</span>
 
 (conference).</a><br />
 
 
 
 
-	<a href="http://hcitang.org/papers/2020-chi2020-mukbang.pdf "><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
+	<a href="http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.mp4"><i class="fa fa-film"></i></a>
 
-</section><a class="details" href="/papers/anjani2020mukbang/"><!-- --></a></li>
+
+</section><a class="details" href="/papers/vinod2020targetassistance/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/feick2020tangi"><span id="feick2020tangi">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <span style="text-decoration: underline">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</span>. In <i>ISMAR 2020: 2020 IEEE International Symposium on Mixed and Augmented Reality</i>.</span>
 
@@ -711,21 +733,19 @@
 
 </section><a class="details" href="/papers/aseniero2020activityriver/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/vinod2020targetassistance"><span id="vinod2020targetassistance">Vinod Asokan, Scott Bateman, and Anthony Tang. (2020). <span style="text-decoration: underline">Assistance for Target Selection in Mobile Augmented Reality</span>. In <i>GI 2020: Proceedings of the 46th Graphics Interface Conference 2020</i>, 10 pages.</span>
+    <a href="/papers/anjani2020mukbang"><span id="anjani2020mukbang">Laurensia Anjani, Terrance Mok, Anthony Tang, Lora Oehlberg, and Goh Wooi Boon. (2020). <span style="text-decoration: underline">Why do people watch others eat? An empirical study on the motivations and practices of mukbang viewers</span>. In <i>CHI 2020: Proceedings of the 2020 SIGCHI Conference on Human Factors in Computing Systems</i>, 1–12.</span>
 
 (conference).</a><br />
 
 
 
 
-	<a href="http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2020-chi2020-mukbang.pdf "><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href="http://hcitang.org/papers/2020-gi2020-bateman-targeting-assistance.mp4"><i class="fa fa-film"></i></a>
 
-
-</section><a class="details" href="/papers/vinod2020targetassistance/"><!-- --></a></li>
+</section><a class="details" href="/papers/anjani2020mukbang/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/tolley2019windywall"><span id="tolley2019windywall">David Tolley, Thi Ngoc Tram Nguyen, Anthony Tang, Nimesha Ranasinghe, Kensaku Kawauchi, and Ching-Chiuan Yen. (2019). <span style="text-decoration: underline">WindyWall: Exploring Creative Wind Simulations</span>. In <i>TEI 2019: International Conference on Tangible and Embedded Interaction 2019</i>, 635–644.</span>
 
@@ -1139,23 +1159,23 @@
 
 </section><a class="details" href="/papers/jones2016dronevideoconferencing/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/tang2015physioathome"><span id="tang2015physioathome">Richard Tang, Xing-Dong Yang, Anthony Tang, Scott Bateman, and Joaquim Jorge. (2015). <span style="text-decoration: underline">Physio@Home: Exploring visual guidance and feedback techniques for physiotherapy patients at home</span>. In <i>CHI 2015: Proceedings of the 2015 SIGCHI Conference on Human Factors in Computing Systems</i>, ACM, 4123–4132.</span>
+    <a href="/papers/jones2015mobilecamerawork"><span id="jones2015mobilecamerawork">Brennan Jones, Anna Witcraft, Anthony Tang, Scott Bateman, and Carman Neustaedter. (2015). <span style="text-decoration: underline">Mechanics of Camera Work in Mobile Video Collaboration</span>. In <i>CHI 2015: Proceedings of the 2015 SIGCHI Conference on Human Factors in Computing Systems</i>, ACM, 957–966.</span>
 
 (conference).</a><br />
 
 
 
 
-	<a href="http://hcitang.org/papers/2015-chi2015-physio-at-home.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2015-chi2015-mobile-video-collaboration.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href="http://hcitang.org/papers/2015-chi2015-physio-at-home.mp4"><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2015-chi2015-mobile-video-collaboration.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href="http://dx.doi.org/10.1145/2702123.2702401"><i class="fa fa-external-link"></i></a>
+	<a href="http://dx.doi.org/10.1145/2702123.2702345"><i class="fa fa-external-link"></i></a>
 
-</section><a class="details" href="/papers/tang2015physioathome/"><!-- --></a></li>
+</section><a class="details" href="/papers/jones2015mobilecamerawork/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/marquardt2015excite"><span id="marquardt2015excite">Nicolai Marquardt, Frederico Schardong, and Anthony Tang. (2015). <span style="text-decoration: underline">EXCITE: EXploring Collaborative Interaction in Tracked Environments</span>. In <i>INTERACT 2015: Proceedings of INTERACT 2015 - 16th IFIP TC 13 International Conference</i>, 89–97.</span>
 
@@ -1199,23 +1219,23 @@
 
 </section><a class="details" href="/papers/seyed2015ciphercard/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/jones2015mobilecamerawork"><span id="jones2015mobilecamerawork">Brennan Jones, Anna Witcraft, Anthony Tang, Scott Bateman, and Carman Neustaedter. (2015). <span style="text-decoration: underline">Mechanics of Camera Work in Mobile Video Collaboration</span>. In <i>CHI 2015: Proceedings of the 2015 SIGCHI Conference on Human Factors in Computing Systems</i>, ACM, 957–966.</span>
+    <a href="/papers/tang2015physioathome"><span id="tang2015physioathome">Richard Tang, Xing-Dong Yang, Anthony Tang, Scott Bateman, and Joaquim Jorge. (2015). <span style="text-decoration: underline">Physio@Home: Exploring visual guidance and feedback techniques for physiotherapy patients at home</span>. In <i>CHI 2015: Proceedings of the 2015 SIGCHI Conference on Human Factors in Computing Systems</i>, ACM, 4123–4132.</span>
 
 (conference).</a><br />
 
 
 
 
-	<a href="http://hcitang.org/papers/2015-chi2015-mobile-video-collaboration.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2015-chi2015-physio-at-home.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href="http://hcitang.org/papers/2015-chi2015-mobile-video-collaboration.mp4"><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2015-chi2015-physio-at-home.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href="http://dx.doi.org/10.1145/2702123.2702345"><i class="fa fa-external-link"></i></a>
+	<a href="http://dx.doi.org/10.1145/2702123.2702401"><i class="fa fa-external-link"></i></a>
 
-</section><a class="details" href="/papers/jones2015mobilecamerawork/"><!-- --></a></li>
+</section><a class="details" href="/papers/tang2015physioathome/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/aseniero2015stratos"><span id="aseniero2015stratos">Bon Adriel Aseniero, Tiffany Wun, David Ledo, Guenther Ruhe, Anthony Tang, and Sheelagh Carpendale. (2015). <span style="text-decoration: underline">STRATOS: Using Visualization to Support Decisions in Strategic Software Release Planning</span>. In <i>CHI 2015: Proceedings of the 2015 SIGCHI Conference on Human Factors in Computing Systems</i>, ACM, 1479–1488.</span>
 
@@ -2005,7 +2025,7 @@
 
 
 
-	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i></a>
