--- a/papers/index.html
+++ b/papers/index.html
@@ -73,6 +73,8 @@
 			<h3>Jump to...</h3>
 			
 			
+			<a href="#2024">2024</a>&nbsp;&nbsp;&nbsp;
+			
 			<a href="#2023">2023</a>&nbsp;&nbsp;&nbsp;
 			
 			<a href="#2022">2022</a>&nbsp;&nbsp;&nbsp;
@@ -121,6 +123,26 @@
 					<div id="content">
 						<!-- Content -->
 						
+<h1><a name="2024"></a>2024</h1>
+<ol class="bibliography"><li><section id="citation">
+    <a href="/papers/pratte2024hackles"><span id="pratte2024hackles">Sydney Pratt, Anthony Tang, Shannon Hoover, and Lora Oehlberg. (2024). <span style="text-decoration: underline"> HACKLES: Simulating and Visually Representing the Anxiety of Walking Alone </span>. In <i>TEI ’24: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href=" "><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://tei.acm.org/2024"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+	<a href=" "><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/pratte2024hackles/"><!-- --></a></li></ol>
+
 <h1><a name="2023"></a>2023</h1>
 <ol class="bibliography"><li><section id="citation">
     <a href="/papers/pratte2023designspace"><span id="pratte2023designspace">Sydney Pratte, Anthony Tang, Shannon Hoover, Maria Elana Hoover, Matt Laprairie, Catherine Larose, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> Towards a Design Space for Storytelling on the Fashion Technology Runway </span>. In <i>TEI ’23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
@@ -286,7 +308,7 @@
 
 
 
-	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i></a>
