--- a/papers/pratte2024hackles/index.html
+++ b/papers/pratte2024hackles/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Supporting Artefact Awareness in Partially-Replicated Workspaces </title>
+		<title> HACKLES: Simulating and Visually Representing the Anxiety of Walking Alone </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,28 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Supporting Artefact Awareness in Partially-Replicated Workspaces </h1>
+						<h1 style="margin: 0 0 0.5em 0"> HACKLES: Simulating and Visually Representing the Anxiety of Walking Alone </h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="poh2023artefactawarenessworkshop">Emran Poh, Anthony Tang, Jeannie S. Lee, and Shengdong Zhao. (2023). <span style="text-decoration: underline"> Supporting Artefact Awareness in Partially-Replicated Workspaces </span>. In <i>ISMAR23 Workshop: 1st Joint Workshop on Cross Reality</i>.</span>
+<span id="pratte2024hackles">Sydney Pratt, Anthony Tang, Shannon Hoover, and Lora Oehlberg. (2024). <span style="text-decoration: underline"> HACKLES: Simulating and Visually Representing the Anxiety of Walking Alone </span>. In <i>TEI ’24: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Using Cross Reality (CR) approaches for remote collaboration
-will often result in partially-replicated workspaces. Here, workspace
-artefacts are not equally accessible—i.e. a physical artefact may only
-be manipulated by one collaborator—and in general, the artefacts
-become desynchronised over time. In this paper, we introduce a
-framework for artefact awareness that can help collaborators main-
-tain an understanding of each others’ manipulations with workspace
-artefacts. We illustrate our design explorations through sketches, and
-outline how we aim to study the effectiveness and utility of artefact
-awareness in cross reality remote collaboration. In our work, we
-expect to show that effectively supporting artefact awareness will
-help make cross-reality remote collaboration smoother.</p>
+<p style="margin: 0.5em 0 1em 0">In this work, we compare the designs of two fashion-tech garments that communicate the anxiety felt when walking alone. While the two garments share a common vision, they are designed to be worn in two radically different settings and to communicate to different audiences: one directly communicates an empathetic experience to its wearer; the other a model wears at a runway show and must share its story to a general audience. We used Research Through Design (RtD) methods to design both fashion-tech garments. Then, we recorded and analyzed the design process for both garments via an annotated portfolio to compare how the audience and setting influenced the design approach and the final wearable. In this pictorial, we describe both fashion-tech designs and a comparison of their respective annotated portfolios. Our analysis highlights how wearable technology must respond to context to continue communicating its story to its intended audience.</p>
 
 <!--
 
@@ -106,27 +95,29 @@ help make cross-reality remote collaboration smoother.</p>
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf)</a><br/>
+	<a href=" "><i class="fa fa-file-pdf-o"></i> PDF File ( )</a><br/>
 
 
-	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i> URL (https://cross-realities.org)</a><br/>
+	<a href="https://tei.acm.org/2024"><i class="fa fa-sticky-note-o"></i> URL (https://tei.acm.org/2024)</a><br/>
 
 
+
+	<a href=" "><i class="fa fa-external-link"></i> DOI ( )</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{poh2023artefactawarenessworkshop,<br />
-&nbsp;&nbsp;author = {Poh, Emran and Tang, Anthony and Lee, Jeannie S. and Zhao, Shengdong},<br />
-&nbsp;&nbsp;title = { Supporting Artefact Awareness in Partially-Replicated Workspaces },<br />
-&nbsp;&nbsp;booktitle = {ISMAR23 Workshop: 1st Joint Workshop on Cross Reality},<br />
-&nbsp;&nbsp;editor = {Liang, Hai-Ning and Jetter, Hans-Christian and Maurer, Frank and Gruenefeld, Uwe and Billinghurst, Mark and Anthes, Christoph},<br />
-&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf},<br />
-&nbsp;&nbsp;year = {2023},<br />
-&nbsp;&nbsp;type = {workshop},<br />
-&nbsp;&nbsp;url = {https://cross-realities.org}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{pratte2024hackles,<br />
+&nbsp;&nbsp;author = {Pratt, Sydney and Tang, Anthony and Hoover, Shannon and Oehlberg, Lora},<br />
+&nbsp;&nbsp;title = { HACKLES: Simulating and Visually Representing the Anxiety of Walking Alone },<br />
+&nbsp;&nbsp;booktitle = {TEI '24: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction},<br />
+&nbsp;&nbsp;pdfurl = { },<br />
+&nbsp;&nbsp;doi = { },<br />
+&nbsp;&nbsp;year = {2024},<br />
+&nbsp;&nbsp;type = {conference},<br />
+&nbsp;&nbsp;url = {https://tei.acm.org/2024}<br />
 }<br />
 </p>
 					</div>
