--- a/projects/mixed-reality-workrooms/index.html
+++ b/projects/mixed-reality-workrooms/index.html
@@ -236,6 +236,24 @@
 
 </section><a class="details" href="/papers/reilly2015mixedreality/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/reilly2011organicui"><span id="reilly2011organicui">Derek Reilly, Anthony Tang, Andy Wu, Andy Echenique, Jonathan Massey, Niels Mathiasen, Ali Mazalek, and W. Keith Edwards. (2011). <span style="text-decoration: underline">Organic UIs in Cross-Reality Spaces</span>. In <i>Second International Workshop on Organic User Interfaces at TEI 2011</i>.</span>
+
+	(Girouard, Audrey and Vertegaal, Roel and Poupyrev, Ivan, Eds.)
+
+(workshop).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2011-tei2011workshop-organic-cross-reality.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="http://www.organicui.org/workshop"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/reilly2011organicui/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/wu2011tangible"><span id="wu2011tangible">Andy Wu, Derek Reilly, Anthony Tang, and Ali Mazalek. (2011). <span style="text-decoration: underline">Tangible navigation and object manipulation in virtual environments</span>. In <i>TEI ’11: Proceedings of the fifth international conference on Tangible,
     embedded, and embodied interaction</i>, ACM, 37–44.</span>
 
@@ -255,25 +273,7 @@
 
 	<a href="http://doi.acm.org/10.1145/1935701.1935710"><i class="fa fa-external-link"></i></a>
 
-</section><a class="details" href="/papers/wu2011tangible/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/reilly2011organicui"><span id="reilly2011organicui">Derek Reilly, Anthony Tang, Andy Wu, Andy Echenique, Jonathan Massey, Niels Mathiasen, Ali Mazalek, and W. Keith Edwards. (2011). <span style="text-decoration: underline">Organic UIs in Cross-Reality Spaces</span>. In <i>Second International Workshop on Organic User Interfaces at TEI 2011</i>.</span>
-
-	(Girouard, Audrey and Vertegaal, Roel and Poupyrev, Ivan, Eds.)
-
-(workshop).</a><br />
-
-
-
-
-	<a href="http://hcitang.org/papers/2011-tei2011workshop-organic-cross-reality.pdf"><i class="fa fa-file-pdf-o"></i></a>
-
-
-	<a href="http://www.organicui.org/workshop"><i class="fa fa-sticky-note-o"></i></a>
-
-
-
-</section><a class="details" href="/papers/reilly2011organicui/"><!-- --></a></li></ol>
+</section><a class="details" href="/papers/wu2011tangible/"><!-- --></a></li></ol>
 
 
 
